<resources>
    <string name="app_name">HW3_To-Do-List</string>
    <string name="to_do_list">TO-DO LIST</string>
    <string name="add_to_do">Add To-Do</string>
    <string name="todo">TODO</string>
    <string name="go_back">Go Back</string>
    <string name="add_your_tasks_below">Add your tasks below:</string>
    <string name="enter_a_task">Enter a task</string>
    <string name="save_and_add_new_one">Save and add new one</string>
    <string name="save_and_go_back">Save and go back</string>
    <string name="go_back_cancel">go back (Cancel)</string>
</resources>
